--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,13 @@
 theme: jekyll-theme-cayman
 remote_theme:benbalter/retlab
 markdown: kramdown
+lsi: false
+safe: true
+source: [your repo's top level directory]
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
